adding background image to home page

--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -55,7 +55,7 @@ video {
   background: #fff;
 }
 
-.navbar .apptbtn{
+.navbar .signUpBtn{
   background: #1977cc;
   margin-left: 130px;
   border-radius: 4px;
