--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -22,8 +22,8 @@ video {
   left: 50%;
   min-width: 100%;
   min-height: 100%;
-  width: auto;
-  height: auto;
+  width: 50em;
+  height: 50em;
   z-index: 0;
   transform: translateX(-50%) translateY(-50%);
 }
@@ -66,6 +66,50 @@ video {
   line-height: 2.3;
 }
 
-/* .navbar p{
-  
-} */
+.carousel-item {
+  height: 100vh;
+  min-height: 300px;
+}  
+.carousel-caption{
+  bottom: 220px;
+  z-index: 2;
+}
+
+.carousel-caption h5 {
+  font-size: 45px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 25px;
+
+}
+
+.carousel-caption p {
+  width: 60%;
+  margin: auto;
+  font-size: 18px;
+  line-height: 1.8;
+}
+
+.carousel-caption a {
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #1977cc;
+  padding: 5px 20px;
+  display: inline-block;
+  color: #fff;
+  margin-top: 15px;
+  border-radius: 5px;
+}
+
+.carousel-inner:before {
+  content: ;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top:0;
+  left: 0;
+  background: rgba(0, 0, 0, 1.0);
+
+
+}
+
