--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -1,3 +1,9 @@
+* {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;  
+}
+
 .App {
   text-align: center;
   background-color:#282c34 ;
@@ -16,7 +22,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 25vh;
+  min-height: 17vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,15 +33,20 @@
 
 .App-body {
   background-color: #282c34;
-  padding-top: 5em;
+  padding-top: 1em;
   padding-bottom: 5em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* font-size: calc(10px + 2vmin); */
+  font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.App-body .p{
+  text-align: left;
+}
+
 
 
 .App-link {
@@ -56,11 +67,87 @@
   color: aliceblue;
   padding-bottom: 1em;
   padding-top: 1em;
-
   margin: 1em;
   font-size: larger;
+  max-height: 4em;
+  width: 10em;
 }
 
 .button p {
   text-align: left;
 }
+
+
+
+body {
+  margin: 0;
+  
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+video {
+  position:absolute; 
+  top: 50%; 
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: 50em;
+  height: 50em;
+  z-index: 0;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+
+.carousel-item {
+  height: 100vh;
+  min-height: 300px;
+}  
+.carousel-caption{
+  bottom: 220px;
+  z-index: 2;
+}
+
+.carousel-caption h5 {
+  font-size: 45px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 25px;
+
+}
+
+.carousel-caption p {
+  width: 60%;
+  margin: auto;
+  font-size: 18px;
+  line-height: 1.8;
+}
+
+.carousel-caption a {
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #1977cc;
+  padding: 5px 20px;
+  display: inline-block;
+  color: #fff;
+  margin-top: 15px;
+  border-radius: 5px;
+}
+
+.carousel-inner:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top:0;
+  left: 0;
+  background: rgba(0, 0, 0, 1.0);
+
+
+}
+
