--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;  
@@ -102,7 +102,7 @@ video {
 }
 
 .carousel-inner:before {
-  content: ;
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
@@ -112,4 +112,4 @@ video {
 
 
 }
-
+ */
