--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -23,7 +23,7 @@
 .App-header {
   background-color: #282c34;
   min-height: 17vh;
-  display: flex;
+  display: stretch;
   flex-direction: column;
   align-items: center;
   justify-content: center;
