--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -7,6 +7,7 @@
 .App {
   text-align: center;
   background-color:#282c34 ;
+
 }
 
 .App-logo {
@@ -21,14 +22,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 17vh;
-  display: stretch;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  /* font-size: calc(10px + 2vmin); */
-  color: white;
+ 
+}
+
+.App-body .tagline {
 }
 
 .App-body {
@@ -40,6 +37,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  min-height: calc(100vh - 34px);
+
   color: white;
 }
 
@@ -47,7 +46,12 @@
   text-align: left;
 }
 
-
+.App-footer {
+  background-color: blue;
+  position: relative;
+  left: 0;
+  bottom: 0;
+}
 
 .App-link {
   color: #61dafb;
